--- a/TODO.org
+++ b/TODO.org
@@ -1,8 +1,18 @@
+* google map api
 * daterange - angular js directive instead of datepicker
 * address, typeahead ?
+* add price to car
+
 * WTF: no $le and $ge for dates. Find a solution, use moment.js ?
 
 * connect to minify
-* user session
 
 * scripts include / cdn when prod
+* write tests
+
+* user session
+
+* restyle ap
+
+* users
+* upload photo of the car
